--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@capacitor-community/contacts": "^5.0.4",
+    "@capacitor-mlkit/barcode-scanning": "^5.1.0",
     "@capacitor/android": "5.3.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.3.0",
